alex-codebase/ros2_ws/log/build_2026-04-08_02-07-28/lidar_slam/stderr.log
  File "/ros2_ws/install/lidar_slam/lib/python3.10/site-packages/lidar_slam/lidar_node.py", line 129
    rclpy.sp
            ^
SyntaxError: expected 'except' or 'finally' block

